--- a/src/assets/styles/utils/_reset.scss
+++ b/src/assets/styles/utils/_reset.scss
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:italic,wght@,600,700,800,900&display=swap');
-
+*,
 html,
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: $font-body;
+  font-size: $base-fs;
+  letter-spacing: $letter-spacing;
 }
 
 body {
@@ -20,7 +20,7 @@ body::-webkit-scrollbar {
 }
 
 #app {
-  font-family: 'Poppins', sans-serif;
+  font-family: $font-body;
 }
 
 h1,
@@ -32,43 +32,27 @@ h6,
 span,
 p,
 a {
-  color: #fff;
+  color: $white;
 }
 
-h1 {
-  font-weight: 800;
-  font-size: 64px;
-  line-height: 64px;
+header,
+section,
+footer {
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 12%;
+  }
 }
 
-h2 {
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 96px;
+button {
+  cursor: pointer;
 }
 
-h3 {
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 64px;
-}
-
-h4 {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-}
-
-h5 {
-  font-weight: 800;
-  font-size: 24px;
-  line-height: 36px;
-}
-
-h6 {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 34px;
+ul, li {
+  margin:0;
+  padding: 0;
+  text-indent: 0;
+  list-style-type: none;
+  color: $white;
 }
