--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -1,8 +1,4 @@
-$bg-black: #191919;
-$bg-gray: #F5F5F5;
-$bg-trasparent: #19191980;
-
-$bg-button: #E9A14D;
-
-$text-white: #fff;
-$color-gray: #858585;
+@import 'settings/colors';
+@import 'settings/spacing';
+@import 'settings/topography';
+@import 'settings/breacpoints';
