--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -1,4 +1,4 @@
-@import 'settings/colors';
-@import 'settings/spacing';
-@import 'settings/topography';
-@import 'settings/breacpoints';
+@import './settings/colors';
+@import './settings/spacing';
+@import './settings/topography';
+@import './settings/breacpoints';
