--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
 
-@import 'utils/vars';
+@import 'utils/topography';
+@import 'utils/breacpoints';
+@import 'utils/colors';
+@import 'utils/spacing';
+
 @import 'utils/mixins';
 @import 'utils/reset';
 @import 'utils/utilites';
