--- a/src/assets/styles/utils/_components.scss
+++ b/src/assets/styles/utils/_components.scss
@@ -46,7 +46,7 @@
   width: 100vw;
   letter-spacing: -2.7px;
 
-  @include onTablet {
+  @include moreThanTablet {
     width: 50vw;
   }
 }
@@ -59,7 +59,7 @@
 
   &__logo {
     padding-bottom: $spacing-sm;
-    @include onDesktop {
+    @include moreThanTablet {
       padding-bottom: $spacing-xl;
     }
   }
@@ -89,7 +89,7 @@
   height: 24px;
   margin: 0 auto;
   
-  @include onTablet {
+  @include moreThanTablet {
     width: 300px;
     height: 50px;
   }
