--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -44,10 +44,17 @@
 }
 
 @mixin bg-two-img {
-  background-image: url('@/assets/icons/o.svg'), url('@/assets/icons/f.svg'), url('@/assets/icons/l.svg'), url('@/assets/images/top.png');
-  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-  background-position: 0 -12%, 0 107%, 100% 1%, 0 0;
-  background-size: 444px, 660px, 322px, 100% 100%;
+  background-image: url('@/assets/images/top.png');
+  background-repeat: no-repeat;
+  background-position: 64% 50%;
+  background-size: cover;
+
+  @include moreThanTablet {
+    background-image: url('@/assets/icons/o.svg'), url('@/assets/icons/f.svg'), url('@/assets/icons/l.svg'), url('@/assets/images/top.png');
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: 0 -12%, 0 107%, 100% 1%, 0 0;
+    background-size: 444px, 660px, 322px, 100% 100%;
+  }
 }
 
 @mixin container {
@@ -68,7 +75,7 @@
 
   @include moreThanTablet {
     width: 50%;
-    height: 100%;
+    height: 100vh;
     display: inline-block;
   }
 }
