--- a/src/assets/styles/utils/_utilites.scss
+++ b/src/assets/styles/utils/_utilites.scss
@@ -18,6 +18,14 @@
   text-align: right !important;
 }
 
+.u-text-l {
+  text-align: left !important;
+}
+
+.u-text-center {
+  text-align: center;
+}
+
 .u-color-dark {
   color: $primary;
 }
@@ -88,8 +96,15 @@
   max-width: fit-content;
 }
 
-.uh-fit {
-  min-height: fit-content;
+.u-h-fit {
+  max-height: fit-content;
+}
+
+.u-fit-sm {
+  max-height: fit-content;
+  @include moreThanTablet {
+    height: 100vh;
+  }
 }
 
 .u-w-100 {
@@ -106,6 +121,34 @@
 
 .u-py-2 {
   padding: 4px 0 8px 0;
+}
+
+.u-pl-1 {
+  padding-left: $spacing-unit;
+}
+
+.u-pt-1 {
+  padding-top: 20px;
+}
+
+.u-pb-5 {
+  padding-bottom: $spacing-xl;
+
+}
+.u-p-xl {
+  padding: $spacing-xl;
+}
+
+.u-p-lg {
+  padding: $spacing-lg;
+}
+
+.u-p-md {
+  padding: $spacing-md;
+}
+
+.u-p-sm {
+  padding: $spacing-unit;
 }
 
 .u-mb-center {
@@ -125,10 +168,6 @@
 
 .u-mt-8 {
   margin-top: $spacing-sm;
-}
-
-.u-pb-5 {
-  padding-bottom: $spacing-xl;
 }
 
 .u-ml-5 {
@@ -172,23 +211,40 @@ h1 {
 
 h2 {
   font-weight: $fw-6;
-  font-size: $fs-xl;
-  line-height: 96px;
+  font-size: 36px;
+  line-height: 48px;
   letter-spacing: -2.7px;
+
+  @include moreThanTablet {
+    font-size: $fs-xl;
+    line-height: 96px;
+  }
 }
 
 h3 {
-  font-weight: $fw-8;
-  font-size: $fs-xl;
-  line-height: $fs-xl;
+  font-weight: $fw-7;
+  font-size: $fs-lg;
+  line-height: 42px;
+
+  @include moreThanTablet {
+    font-weight: $fw-8;
+    font-size: $fs-xl;
+    line-height: $fs-xl;
+  }
 }
 
 h4 {
-  font-weight: $fw-7;
-  font-size: $fs-md;
+  font-weight: $fw-6;
+  font-size: 20px;
   line-height: $fs-xm;
-  letter-spacing: 0.04em;
+  letter-spacing: 0;
   text-transform: uppercase;
+
+  @include moreThanTablet {
+    font-weight: $fw-7;
+    font-size: $fs-md;
+    letter-spacing: 0.04em;
+  }
 }
 
 h5 {
@@ -199,7 +255,14 @@ h5 {
 
 h6 {
   font-weight: $fw-5;
+  font-size: $base-fs;
+  line-height: 22px;
+  padding-bottom: 6px;
+
+  @include moreThanTablet {
+    font-weight: $fw-5;
   font-size: $fs-md;
   line-height: 34px;
   padding-bottom: 6px;
+  }
 }
