--- a/src/assets/styles/utils/_utilites.scss
+++ b/src/assets/styles/utils/_utilites.scss
@@ -54,6 +54,10 @@
   background-color: $bg-trasp;
 }
 
+.u-bg-trasparent {
+  background-color: transparent;
+}
+
 .u-bg-dark {
   background-color: $primary;
 }
