--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -9,16 +9,6 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  &:hover {
-    transform: scale(1.1);
-    transition: transform .5s ease-out;
-  }
-
-  &:disabled {
-    opacity: 0.8;
-    transform: none;
-  }
-
   @include moreThanTablet {
     width: 40%;
     height: 12vh;
@@ -69,7 +59,14 @@
   background-position: 64% 50%;
   background-size: cover;
 
-  @include moreThanTablet {
+  @include onTablet() {
+    background-image: url('/icons/o.svg'), url('/icons/f.svg'), url('/icons/l.svg'), url('@/assets/images/top.png');
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: 0 -12%, 0 100%, 100% 1%, 50% 0;
+    background-size: 400px, 430px, 222px, 130% 100%;
+  }
+
+  @include onDesktop {
     background-image: url('/icons/o.svg'), url('/icons/f.svg'), url('/icons/l.svg'), url('@/assets/images/top.png');
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
     background-position: 0 -12%, 0 107%, 100% 1%, 0 0;
@@ -119,19 +116,19 @@
 }
 
 @mixin onTablet {
-  @media (min-width: 768px) and (max-width: 1023px) {
+  @media screen and (max-width: 1023px) and (min-width: 768px) {
     @content;
   }
 }
 
 @mixin onDesktop {
-  @media (min-width: 1024px) {
+  @media screen and (min-width: 1024px) {
     @content;
   }
 }
 
 @mixin moreThanTablet {
-  @media (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     @content;
   }
 }
