--- a/src/assets/styles/utils/_utilites.scss
+++ b/src/assets/styles/utils/_utilites.scss
@@ -106,7 +106,8 @@
 
 .u-fit-sm {
   max-height: fit-content;
-  @include moreThanTablet {
+
+  @include onDesktop {
     height: 100vh;
   }
 }
@@ -157,7 +158,7 @@
 
 .u-mb-center {
   text-align: center;
-  @include moreThanTablet {
+  @include onDesktop {
     text-align: start;
   }
 }
