remake style and catalog route

--- a/src/assets/styles/utils/_components.scss
+++ b/src/assets/styles/utils/_components.scss
@@ -9,16 +9,6 @@
   }
 }
 
-.c-bg-img-combine {
-  width: 100vw;
-  height: 100vh;
-  @include bg-two-img;
-
-  @include moreThanTablet {
-    height: 110vh;
-  }
-}
-
 .c-m-h1 {
   padding-bottom: 2rem;
   letter-spacing: -2px;
@@ -26,52 +16,6 @@
   @include moreThanTablet {
     letter-spacing: -2.7px;
   }
-}
-
-.c-top-container {
-  width: 100%;
-  padding-top: 70vh;
-  @include moreThanTablet {
-    padding-top: 50vh;
-    padding-left: 12%;
-  }
-}
-
-.c-button-header {
-  width: 100%;
-  font-size: $fs-md;
-  line-height: $fs-md;
-  font-weight: $fw-6;
-  text-align: start;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-  height: fit-content;
-  padding: 8px 20px;
-  padding-left: 0;
-  border: none;
-  margin: auto 2px 8px;
-  background-image: url('icons/chevron-right-white.svg');
-  background-repeat: no-repeat;
-  background-position: 95% 50%;
-  background-size: 10px;
-
-  @include moreThanTablet {
-    font-size: $base-fs;
-    line-height: $base-fs;
-    width: fit-content;
-    margin: auto 2px;
-    padding: 4px 8px;
-    margin: auto 2px;
-    background-image: unset;
-  }
-}
-
-.c-man {
-  @include half-container('@/assets/images/man.png');
-}
-
-.c-woman {
-  @include half-container('@/assets/images/woman.png');
 }
 
 .c-label {
@@ -84,335 +28,19 @@
   }
 }
 
-.c-footer {
-  width: 100vw;
-  height: fit-content;
-  padding-top: $spacing-lg;
-  background-color: $black;
-
-
-  &__logo {
-    margin: auto;
-    @include onDesktop {
-      margin: 0;
-      padding-bottom: $spacing-xl;
-      align-self: flex-start;
-    }
-  }
-}
-
-.c-fotter-list {
-  &__title {
-    margin: $spacing-md 0;
-    letter-spacing: -1px;
-  }
-
-  &__item {
-    padding-bottom: 18px;
-    cursor: pointer;
-  }
-}
-
 .icon {
   display: inline-block;
   width: 18px;
   height: 18px;
 }
 
-.logo {
-  display: inline-block;
-  width: 200px;
-  height: 30px;
-  margin: 0 auto;
-
-  @include moreThanTablet {
-    width: 300px;
-    height: 50px;
-  }
-}
-
 .icon-chevron {
   display: inline-block;
-  width: 20px;
+  width: 10px;
   height: 10px;
-  margin: 0 8px;
+  margin-left: 8px;
 }
 
-.c-mobile-menu {
-  position: absolute;
-  top: 60px;
-  left: 0;
-  width: 100vw;
-  min-height: fit-content;
-  height: 100vh;
-  padding: 20px;
-  // padding-top: 60px;
-  background-color: inherit;
-
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-
-  &__contacts {
-    display: inline-block;
-    height: 100%;
-    padding-top: 70%;
-  }
+.c-portal {
+  @include portal;
 }
-
-.c-input {
-  &__container {
-    display: flex;
-    align-items: center;
-    border: 1px solid $white;
-    margin-bottom: $spacing-lg;
-
-    @include moreThanTablet {
-      width: 300px;
-      margin-bottom: $spacing-sm;
-    }
-  }
-
-  &__input {
-    width: 90%;
-    height: 40px;
-    padding-left: $spacing-lg;
-    border: none;
-    border-right: 1px solid $white;
-    background-color: inherit;
-  }
-}
-
-.c-icon {
-  &__container {
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    justify-content: space-between;
-    margin: auto 0;
-
-    // @include onDesktop {
-    //   margin: auto 0;
-    // }
-  }
-
-  &__button {
-    width: fit-content;
-    height: fit-content;
-    background-color: inherit;
-    padding: 10px;
-    padding-bottom: 4px;
-    border: none;
-  }
-}
-
-.c-bottom-section {
-  width: 100vw;
-  height: fit-content;
-  background-color: $black;
-
-  @include moreThanTablet {
-    background-image: url('/images/LETTERS.svg');
-    background-repeat: no-repeat;
-    background-position: 0 80%;
-    background-size: cover;
-  }
-}
-
-.c-subscribe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background-color: transparent;
-  padding: $spacing-xl 0 100px;
-  gap: $spacing-lg;
-
-
-  &__title {
-    margin-top: $base-fs;
-    
-    @include moreThanTablet {
-      margin-top: $spacing-xl;
-    }
-  }
-
-  &__imput {
-    text-align: center;
-    border: none;
-    border-bottom: 1px solid $white;
-    background-color: $black;
-    letter-spacing: 0;
-  }
-
-  &__checkbox {
-    padding: $spacing-unit;
-    margin-right: $spacing-md;
-    accent-color: $gray-darker;
-  }
-
-  &__button {
-    @include main-button;
-    border-bottom-right-radius: 50px;
-    background-color: $orange;
-    border: 1px solid $orange;
-    margin-top: $spacing-xl;
-  }
-}
-
-.c-pop {
-  height: fit-content;
-  padding-top: 50px;
-  text-align: center;
-
-  &__container {
-    padding-top: 20px;
-
-    @include moreThanTablet {
-      display: grid;
-    }
-  }
-
-  &__item {
-
-    @include onTablet {
-      &:nth-child(odd) {
-        padding-left: 30px;
-      }
-  
-      &:nth-child(even) {
-        padding-right: 30px;
-      }
-    }
-  }
-}
-
-.c-card {
-  position: relative;
-  height: 260px;
-  background-color: #fff;
-  border-top-left-radius: 20px;
-  overflow: hidden;
-  cursor: pointer;
-
-  @include onTablet {
-    height: 350px;
-  }
-
-  @include onDesktop {
-    height: 420px;
-  }
-
-    &__div {
-      height: 75%;
-      @include moreThanTablet {
-        height: 80%;
-      }
-    }
-    
-    &__img {
-      width: 100%;
-      height: 100%;
-      
-      @include moreThanTablet {
-        object-fit: cover;
-      }
-    }
-
-    &__info {
-      text-align: start;
-      padding: 10px;
-    }
-
-    &__tags {
-      width: 100%;
-      height: fit-content;
-      position: absolute;
-      bottom: -28%;
-      left: 0;
-      opacity: 1;
-      text-align: start;
-      padding: 10px;
-      padding-top: 0;
-      opacity: 1;
-      background-color: #fff;
-      z-index: 100;
-
-      @include moreThanTablet {
-        bottom: -18%;
-      }
-    }
-    
-    &__title {
-      @extend .u-color-dark;
-      font-size: 14px;
-      line-height: 22px;
-      font-weight: $fw-5;
-
-      @include moreThanTablet {
-        font-size: 16px;
-        line-height: 20px;
-      }
-    }
-
-    &__price {
-      @extend .u-color-dark;
-      font-size: 12px;
-
-      @include moreThanTablet {
-        font-size: 14px;
-      }
-    }
-
-    &__season {
-      @extend .u-fs-xs;
-      color: $gray-darker;
-    }
-    
-    &__tag {
-      @extend .u-fs-xs;
-      @extend .u-color-dark;
-    }
-
-    &__new {
-      @extend .u-color-ligt;
-      width: 30%;
-      height: 8%;
-      font-size: 12px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      align-items: center;
-      background-color: $orange;
-
-      @include moreThanTablet {
-        font-size: 16px;
-        padding: 4px;
-      }
-    }
-  }
-
-  .c-tag {
-    display: inline-block;
-    padding: 0 4px;
-    margin: $spacing-unit;
-    margin-left: 0;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    border: 2px solid;
-    cursor: pointer;
-    
-    &--filter {
-      @extend .u-color-gray;
-      border-color: $gray-darker;
-    }
-
-    &--card {
-      @extend .u-color-card;
-      border-color: $gray;
-    }
-  }
