--- a/src/assets/styles/utils/_utilites.scss
+++ b/src/assets/styles/utils/_utilites.scss
@@ -14,6 +14,14 @@
   text-transform: uppercase;
 }
 
+.u-capitalizze {
+  text-transform: capitalize;
+}
+
+.u-align-center {
+  align-items: center;
+}
+
 .u-text-r {
   text-align: right !important;
 }
