--- a/src/assets/styles/utils/_topography.scss
+++ b/src/assets/styles/utils/_topography.scss
@@ -10,6 +10,7 @@ $fs-md: $base-fs * 1.5;
 $fs-xm: $base-fs * 1.75;
 $fs-lg: $base-fs * 2;
 $fs-xl: $base-fs * 3;
+$fs-xxl: $base-fs * 4;
 
 $fw-8: 800;
 $fw-7: 700;
