--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -9,11 +9,15 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  @include moreThanTablet {
+  @include onTablet() {
+    width: 80%;
+    height: 9vh;
+    font-size: 36px;
+  }
+
+  @include onDesktop() {
     width: 40%;
     height: 12vh;
-    font-size: 24px;
-    line-height: 36px;
   }
 }
 
@@ -62,24 +66,24 @@
 
 }
 
-@mixin bg-two-img {
-  background-image: url('@/assets/images/top.png');
+@mixin bg-top-banner {
+  background-image: url('@/assets/images/top-mobile.png');
   background-repeat: no-repeat;
-  background-position: 64% 50%;
+  // background-position: ;
   background-size: cover;
 
   @include onTablet() {
-    background-image: url('/icons/o.svg'), url('/icons/f.svg'), url('/icons/l.svg'), url('@/assets/images/top.png');
-    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-    background-position: 0 -12%, 0 100%, 100% 1%, 50% 0;
-    background-size: 400px, 430px, 222px, 130% 100%;
+    background-image: url('@/assets/images/top.png');
+    background-repeat: no-repeat;
+    background-position: 60% 0;
+    background-size: cover;
   }
 
   @include onDesktop {
-    background-image: url('/icons/o.svg'), url('/icons/f.svg'), url('/icons/l.svg'), url('@/assets/images/top.png');
-    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-    background-position: 0 -12%, 0 107%, 100% 1%, 0 0;
-    background-size: 444px, 660px, 322px, 100% 100%;
+    background-image: url('/icons/o.svg'), url('/icons/f.svg'), url('/icons/l.svg'), url('@/assets/images/top.png'), linear-gradient(to right, #D28948, #D29053);
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: 0 -12%, 0 107%, 100% 1%, center, 100%;
+    background-size: 479px, 592px, 322px, contain, 100%;
   }
 }
 
@@ -122,6 +126,12 @@
   line-height: 36px;
   letter-spacing: 0;
   text-transform: uppercase
+}
+
+@mixin over400px {
+  @media screen and (max-width: 768px) and (min-width: 360px) {
+    @content;
+  }
 }
 
 @mixin onTablet {
