--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -25,8 +25,14 @@
   font-weight: $fw-5;
   font-size: $base-fs;
   line-height: 22px;
-  padding: $spacing-sm 0;
+  padding-top: $spacing-xs;
   text-transform: capitalize;
+}
+
+@mixin popup-position {
+  position: absolute;
+  top: 120%;
+  right: 0;
 }
 
 @mixin font ($size, $weight, $lineH, $color) {
@@ -43,6 +49,12 @@
     display: block;
     clear:  both;
   }
+}
+
+@mixin shadow {
+  -webkit-box-shadow: 9px 18px 16px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 9px 18px 16px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 9px 18px 16px 0px rgba(0, 0, 0, 0.3);
 }
 
 @mixin hiden-visualy {
@@ -69,7 +81,6 @@
 @mixin bg-top-banner {
   background-image: url('@/assets/images/top-mobile.png');
   background-repeat: no-repeat;
-  // background-position: ;
   background-size: cover;
 
   @include onTablet() {
