--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -2,5 +2,6 @@
 @import 'spacing';
 @import 'topography';
 @import 'breacpoints';
-@import 'mixins';
-@import './utilites';
+@import './mixins';
+@import './../utilities/utilites.spacing';
+
