fix footer and card responsive

--- a/src/assets/styles/utilities/_utilites.spacing.scss
+++ b/src/assets/styles/utilities/_utilites.spacing.scss
@@ -32,6 +32,12 @@ $text-alignments: 'center', 'right', 'left';
         text-align: #{$text-alignment};
       }
     }
+
+    &-mtm-#{$text-alignment} {
+      @include moreThanTablet {
+        text-align: #{$text-alignment};
+      }
+    }
   
     &-lg-#{$text-alignment} {
       @include onDesktop {
