feat color scss utilities and route transition

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,5 +10,6 @@
 @import 'utils/utilites';
 @import 'utils/grid';
 @import 'utils/components';
-@import 'utilities/utilites.spacing'
+@import 'utilities/utilites.spacing';
+@import 'utilities/utilities.colors';
 
