--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -4,4 +4,5 @@
 @import 'breacpoints';
 @import './mixins';
 @import './../utilities/utilites.spacing';
+@import './../utilities/utilities.colors';
 
