--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -35,11 +35,11 @@
   right: 0;
 }
 
-@mixin font ($size, $weight, $lineH, $color) {
+@mixin font ($size, $weight, $lineH) {
   font-size: $size;
   font-weight: $weight;
   line-height: $lineH;
-  color: $info;
+  // color: $info;
   text-transform: capitalize;
 }
 
